--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <div class="w3-card-4">
                     <img src="imgs/89Trillion_2.JPG" style="width:100%">
                     <div class="w3-container w3-center">
-                        <p>Worked in a Start Up company in Hearst and learned a lot</p><br>
+                        <p>Worked as a game developer in a game company</p><br>
                     </div>
                 </div>
 
@@ -327,7 +327,7 @@
                 <div class="w3-card-4">
                     <img src="imgs/89Trillion_1.JPG" style="width:100%">
                     <div class="w3-container w3-center">
-                        <p>Worked in a Start Up company in Hearst and learned a lot</p><br>
+                        <p>Very nice experience working in a Chinese company</p><br>
                     </div>
                 </div>
 
