--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@
         <div class="w3-row-padding">
             <div class="w3-half">
                 <h3>Programming Languages</h3>
+                <p class="w3-wide">JAVA</p>
+                <div class="w3-white">
+                    <div class="w3-dark-grey" style="height:10px;width:90%"></div>
+                </div>                
                 <p class="w3-wide">C#</p>
                 <div class="w3-white">
                     <div class="w3-dark-grey" style="height:10px;width:90%"></div>
@@ -148,10 +152,6 @@
                 <p class="w3-wide">Python</p>
                 <div class="w3-white">
                     <div class="w3-dark-grey" style="height:10px;width:85%"></div>
-                </div>
-                <p class="w3-wide">JAVA</p>
-                <div class="w3-white">
-                    <div class="w3-dark-grey" style="height:10px;width:90%"></div>
                 </div>
                 <p class="w3-wide">PHP</p>
                 <div class="w3-white">
@@ -186,6 +186,10 @@
                 <div class="w3-white">
                     <div class="w3-dark-grey" style="height:10px;width:90%"></div>
                 </div>
+                <p class="w3-wide">SVN</p>
+                <div class="w3-white">
+                    <div class="w3-dark-grey" style="height:10px;width:85%"></div>
+                </div>                
                 <p class="w3-wide">MySQL</p>
                 <div class="w3-white">
                     <div class="w3-dark-grey" style="height:10px;width:95%"></div>
@@ -203,10 +207,6 @@
                     <div class="w3-dark-grey" style="height:10px;width:90%"></div>
                 </div>
                 <p class="w3-wide">jQuery</p>
-                <div class="w3-white">
-                    <div class="w3-dark-grey" style="height:10px;width:85%"></div>
-                </div>
-                <p class="w3-wide">JetBrains</p>
                 <div class="w3-white">
                     <div class="w3-dark-grey" style="height:10px;width:85%"></div>
                 </div>
