--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
 
     <div class="w3-center">
-        <a href="Resume_4B.pdf" target="_blank">
+        <a href="Austin_Resume.pdf" target="_blank">
             <button class="w3-button w3-light-grey w3-padding-large w3-section">
                 <i class="fa fa-download"></i> Download Resume
             </button>
