--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <hr style="width:300px" class="w3-opacity">
         <img src="imgs/Education_1.png" alt="Uwaterloo" class="w3-left w3-circle w3-margin-right" style="width:80px">
         <p><span class="w3-large w3-margin-right">University of Waterloo &emsp; Waterloo, Canada</span></p>
-        <p>Computer Enginnering &emsp; 2015-Present</p><br>
+        <p>Computer Enginnering &emsp; Sep 2016 - Jun 2021</p><br>
 
 
         <!-- Work_Experience -->
