--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Austin Wu Portfolio</title>
+<title>Guangyu Wu Portfolio</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -69,8 +69,8 @@
 <div class="w3-padding-large" id="main">
     <!-- Header/Home -->
     <header class="w3-container w3-padding-32 w3-center w3-cyan" id="home">
-        <h1 class="w3-jumbo"><span class="w3-hide-small">Hi, I'm</span> Austin Wu.</h1>
-        <p class="w3-xlarge">Computer Engineering Student</p>
+        <h1 class="w3-jumbo"><span class="w3-hide-small">Hi, I'm</span> Guangyu Wu.</h1>
+        <p class="w3-xlarge">Computer Engineering Graduate</p>
         <img src="imgs/Cover.jpeg" alt="Cover" class="w3-image" width="1000" height="800">
     </header>
 
@@ -261,7 +261,7 @@
 
 
     <div class="w3-center">
-        <a href="Austin_Resume.pdf" target="_blank">
+        <a href="Guangyu_Resume.pdf" target="_blank">
             <button class="w3-button w3-light-grey w3-padding-large w3-section">
                 <i class="fa fa-download"></i> Download Resume
             </button>
@@ -399,7 +399,7 @@
         <i class="fa fa-weixin w3-hover-opacity"></i>&nbsp;
         <i class="fa fa-qq w3-hover-opacity"></i>
         <div class="w3-center">
-            <p>--Created by Austin Wu</p>
+            <p>--Created by Guangyu Wu</p>
         </div>
     </footer>
 </div>
