--- a/index.html
+++ b/index.html
@@ -369,28 +369,14 @@
         <hr style="width:200px" class="w3-opacity">
 
         <div class="w3-section">
-            <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>University of Waterloo,
-                Canada</p>
-            <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: (+86) 13520934468</p>
-            <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email:
-                wu.guangyu@yahoo.com</p>
+            <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>University of Waterloo, Canada</p>
+            <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone:&emsp;(+86) 13520934468</p>
+            <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Email:&emsp;wu.guangyu@yahoo.com</p>
+            <p><i class="fa fa-linkedin fa-fw w3-text-white w3-xxlarge w3-margin-right"></i><a href="https://linkedin.com/in/austin6" target="_blank"><span class="w3-orange"> Click here to find more details on my LinkedIn</span></a></p>
         </div>
-        <br>
-        <p>Lets get in touch. Send me a message:</p>
-
-        <form action="info.php" method="post" target="_blank">
-            <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
-            <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
-            <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
-            <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
-            <p>
-                <button class="w3-button w3-light-grey w3-padding-large" type="submit">
-                    <i class="fa fa-paper-plane"></i> SEND MESSAGE
-                </button>
-            </p>
-        </form>
     </div>
-
+    
+    
 
     <!-- Footer -->
     <footer class="w3-content w3-padding-64 w3-xlarge">
