--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- Header/Home -->
     <header class="w3-container w3-padding-32 w3-center w3-cyan" id="home">
         <h1 class="w3-jumbo"><span class="w3-hide-small">Hi, I'm</span> Guangyu Wu.</h1>
-        <p class="w3-xlarge">Computer Engineering Graduate</p>
+        <p class="w3-xlarge">Computer Engineering New Graduate</p>
         <img src="imgs/Cover.jpeg" alt="Cover" class="w3-image" width="1000" height="800">
     </header>
 
